Prevents bio image overlaying header on small screens

--- a/app/_scss/includes/_metainfo_people.scss
+++ b/app/_scss/includes/_metainfo_people.scss
@@ -185,12 +185,19 @@
 		position: relative;
 
 		.person {
-			width: 47%;
+			height: 100%;
+			min-height: 16em;
+			width: inherit;
 			padding-left: 3%;
 			order: 2;
 			position: absolute;
 			bottom: 0;
 			right: 0;
+
+			img {
+				height: 100%;
+				width: inherit;
+			}
 
 			figcaption {
 				display: none;
@@ -232,6 +239,14 @@
 	}
 }
 
+@media (max-width: 639px) {
+	.metainfo.small.bio {
+		.person {
+			min-height: 13em;
+		}
+	}
+}
+
 @media (max-width: 611px) {
 	.metainfo.small {
 		.person-list {
@@ -242,6 +257,14 @@
 	.metainfo.small.bio {
 		.person {
 			width: 40%;
+			max-width: 12em;
+			height: inherit;
+			max-height: inherit;
+
+			img {
+				width: 100%;
+				height: 100%;
+			}
 		}
 
 		.profile-info {
@@ -288,6 +311,7 @@
 
 		.person {
 			width: 65%;
+			max-width: inherit;
 			padding-left: 0;
 			position: inherit;
 		}
